<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="1dp"
    android:layout_margin="10dp"
    android:background="@drawable/card_edge">

    <!-- A CardView that contains a TextView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/tarjeta_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:weightSum="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/foto_cliente"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:contentDescription="@string/descripcion_logo"
                        app:srcCompat="@drawable/cliente" />

                    <TextView
                        android:id="@+id/nombre_cliente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/foto_cliente"
                        android:layout_toRightOf="@+id/foto_cliente"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/telefono_cliente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/nombre_cliente"
                        android:layout_toEndOf="@+id/foto_cliente"
                        android:layout_toRightOf="@+id/foto_cliente"
                        android:text="@string/tarjeta_telefono"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/correo_cliente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/telefono_cliente"
                        android:layout_toEndOf="@+id/foto_cliente"
                        android:layout_toRightOf="@+id/foto_cliente"
                        android:text="@string/tarjeta_correo"
                        android:textSize="12sp" />

                </RelativeLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/colorWhite"
                android:weightSum="1">

                <Button
                    android:id="@+id/btnSolicitud"
                    android:text="@string/accion_solicitudes"
                    android:padding="0dp"
                    android:background="@color/colorWhite"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    app:srcCompat="@drawable/solicitud_blue"/>

                <Button
                    android:id="@+id/btnCotizador"
                    android:text="@string/accion_cotizadores"
                    android:padding="0dp"
                    android:background="@color/colorWhite"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    app:srcCompat="@drawable/cotizador_blue"/>

                <Button
                    android:id="@+id/btnExpediente"
                    android:text="@string/accion_expediente"
                    android:padding="0dp"
                    android:background="@color/colorWhite"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    app:srcCompat="@drawable/expediente_blue"/>

                <Button
                    android:id="@+id/btnEditar"
                    android:text="@string/accion_editar"
                    android:padding="0dp"
                    android:background="@color/colorWhite"
                    android:layout_width="0dp"
                    android:layout_weight="0.20"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    app:srcCompat="@drawable/editar_blue"/>

            </TableRow>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
