<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/padding_superior_item_lista"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:rowCount="10"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.ActividadInsercionSolicitud"
        tools:showIn="@layout/actividad_insercion_solicitud">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mascara_campo_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_row="0">

            <Spinner
                android:id="@+id/campo_producto"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawSelectorOnTop="true"
                android:dropDownWidth="match_parent"
                android:ems="10"
                android:prompt="@string/hint_campo_texto_producto"
                android:background="@drawable/bakground"
                android:entries="@array/array_name" />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/textv_producto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/hint_campo_texto_producto"
            android:textSize="14dp"
            android:layout_marginLeft="10dp"
            android:background="@color/colorWhite" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mascara_campo_banco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_row="1">

            <Spinner
                android:id="@+id/campo_banco4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawSelectorOnTop="true"
                android:dropDownWidth="match_parent"
                android:background="@drawable/bakground"
                android:entries="@array/array_name" />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/textv_banco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/hint_campo_texto_banco"
            android:textSize="14dp"
            android:layout_marginLeft="10dp"
            android:background="@color/colorWhite" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mascara_campo_tipo_amortizacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_row="2">

            <Spinner
                android:id="@+id/campo_tipo_amortizacion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawSelectorOnTop="true"
                android:dropDownWidth="match_parent"
                android:ems="10"
                android:background="@drawable/bakground"
                android:entries="@array/array_name"
                android:prompt="@string/hint_campo_texto_tipo_amortizacion" />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/textv_tipo_amortizacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/hint_campo_texto_tipo_amortizacion"
            android:textSize="14dp"
            android:layout_marginLeft="10dp"
            android:background="@color/colorWhite" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mascara_campo_tipo_pago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_row="3">

            <Spinner
                android:id="@+id/campo_tipo_pago"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawSelectorOnTop="true"
                android:dropDownWidth="match_parent"
                android:ems="10"
                android:background="@drawable/bakground"
                android:entries="@array/array_name"
                android:prompt="@string/hint_campo_texto_tipo_pago" />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/textv_tipo_pago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/hint_campo_texto_tipo_pago"
            android:textSize="14dp"
            android:layout_marginLeft="10dp"
            android:background="@color/colorWhite" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mascara_campo_sobretasa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_row="4">

            <EditText
                android:id="@+id/campo_sobretasa"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/bakground"
                android:textColor="@color/colorGray2"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/textv_sobretasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/hint_campo_texto_sobretasa"
            android:textSize="14dp"
            android:layout_marginLeft="10dp"
            android:background="@color/colorWhite" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mascara_campo_tasa_moratoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_row="5">

            <EditText
                android:id="@+id/campo_tasa_moratoria"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/bakground"
                android:textColor="@color/colorGray2"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/textv_tasa_moratoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:text="@string/hint_campo_texto_tasa_moratoria"
            android:textSize="14dp"
            android:layout_marginLeft="10dp"
            android:background="@color/colorWhite" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mascara_campo_monto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_row="6"
            android:visibility="visible">

            <com.softcredito.app.inputs.CurrencyEditText
                android:id="@+id/campo_monto"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_campo_texto_monto"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/bakground"
                android:textColor="@color/colorGray2"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/textv_monto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="0"
            android:text="@string/hint_campo_texto_monto"
            android:textSize="14dp"
            android:layout_marginLeft="10dp"
            android:background="@color/colorWhite" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mascara_campo_plazo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_row="7">

            <EditText
                android:id="@+id/campo_plazo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/bakground"
                android:textColor="@color/colorGray2"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/textv_plazo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="0"
            android:text="@string/hint_campo_texto_plazo"
            android:textSize="14dp"
            android:layout_marginLeft="10dp"
            android:background="@color/colorWhite" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mascara_campo_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_row="8">

            <Spinner
                android:id="@+id/campo_status"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawSelectorOnTop="true"
                android:dropDownWidth="match_parent"
                android:ems="10"
                android:background="@drawable/bakground"
                android:entries="@array/array_name"
                android:prompt="@string/hint_campo_texto_status" />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/textv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="8"
            android:layout_column="0"
            android:text="@string/hint_campo_texto_status"
            android:textSize="14dp"
            android:layout_marginLeft="10dp"
            android:background="@color/colorWhite" />

    </GridLayout>
</ScrollView>